--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "axios": "^1.7.9",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.9",
     "react-dom": "^18.3.1",
@@ -15,6 +16,7 @@
     "react-router-dom": "^7.1.5",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.3",
+    "sweetalert2": "^11.16.0",
     "tailwindcss": "^4.0.4"
   },
   "scripts": {
